# clicoh

./: .gitignore  Dockerfile  README.md  pyproject.toml  sql_app.db
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 148ad2443a4f_.py  43523b717627_.py  a7bfc73abcb0_.py
app/: constants.py  database.py  exceptions.py  main.py
app/auth/: models.py  routes.py  schemas.py  services.py  validators.py
app/hello/: routes.py
app/orders/: models.py  routes.py  schemas.py  services.py
app/products/: models.py  routes.py  schemas.py  services.py
cmd/: docker-entrypoint.sh
tests/: conf_test_database.py  conftest.py  test_hello.py  test_orders.py  test_products.py  test_user.py
