[tool.poetry]
name = "clichoh"
version = "0.1.0"
description = "Technical Challenge"
authors = ["Alfonso Montilla <montilla05alfonso@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.942"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
