[tool.poetry]
name = "clichoh"
version = "0.1.0"
description = "Technical Challenge"
authors = ["Alfonso Montilla <montilla05alfonso@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
bcrypt = "^3.2.0"
SQLAlchemy = "^1.4.36"
alembic = "^1.7.7"
email-validator = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.942"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
requests = "^2.27.1"
ipython = "7.32"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
